[project]
name = "sqlshort"
description = "short introduction to SQL"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mccole>=3.1.0",
    "taskipy>=1.14.1"
]

[tool.taskipy.tasks.bib]
help = "Check bibliography entries."
cmd = "mccole bib"

[tool.taskipy.tasks.clean]
help = "Clean up generated and cache files."
cmd = "find . -type f -name '*~' -exec rm {} \\;"

[tool.taskipy.tasks.check]
help = "Check code and project."
cmd = """
    mccole check --src . --dst docs
    typos *.md */*.md
"""

[tool.taskipy.tasks.serve]
help = "Serve generated HTML."
cmd = "python -m http.server -d docs"

[tool.taskipy.tasks.site]
help = "Build HTML."
cmd = """
    mccole build --src . --dst docs
    touch docs/.nojekyll
"""

[tool.mccole]
title = "Introduction to SQL"
brand = "SQL"
repo = "https://github.com/gvwilson/sqlshort"
skips = [
    "*~",
    "*.sql",
    "db/**",
    "docs/**",
    "uv.lock"
]
